--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="laptop">
         <div class="screen">
             <div class="lcd">
-                <img src="images/screen-img.jpg">
+                <img src="Your desired picture :)">
             </div>
             <div class="glass-frame"></div>
             <div class="screen-reflection"></div>
